feat(java-concurrent): Add instrumentation unit tests
JUnit testing and trace assert make unit testing possible.