@@ -1,8 +1,15 @@
+import static org.gradle.api.JavaVersion.VERSION_25
+
 plugins {
   id 'idea'
   id 'dd-trace-java.module.instrumentation'
   // Use slf4j-simple as default; logback has a high chance of getting stuck in a deadlock on CI.
   id 'dd-trace-java.conventions.testing.slf4j-simple'
+}
+
+testJvmConstraints {
+  // The new StructuredTaskScope API (JEP 505) only exists from Java 25
+  minJavaVersion = VERSION_25
 }
 
 muzzle {
@@ -15,4 +22,27 @@ idea {
   module {
     jdkName = '25'
   }
+}
+
+/*
+ * Declare previewTest, a test suite that requires the Javac/Java --enable-preview feature flag
+ */
+addTestSuite('previewTest')
+
+// Configure tests compilation
+tasks.named("compilePreviewTestJava", JavaCompile) {
+  configureCompiler(it, 25)
+  options.compilerArgs.add("--enable-preview")
+}
+// Configure tests execution
+tasks.named("previewTest", Test) {
+  jvmArgs = ['--enable-preview']
+}
+// Require the preview test suite to run as part of module check
+tasks.named("check") {
+  dependsOn "previewTest"
+}
+
+dependencies {
+  testImplementation project(':dd-java-agent:instrumentation:datadog:tracing:trace-annotation')
 }
